tests/ui/asm/naked-with-invalid-repr-attr.stderr
error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:6:8
   |
LL |   #[repr(C)]
   |          ^
...
LL | / extern "C" fn example1() {
LL | |
LL | |     naked_asm!("")
LL | | }
   | |_- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:14:8
   |
LL |   #[repr(transparent)]
   |          ^^^^^^^^^^^
...
LL | / extern "C" fn example2() {
LL | |
LL | |     naked_asm!("")
LL | | }
   | |_- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:22:19
   |
LL |   #[repr(align(16), C)]
   |                     ^
...
LL | / extern "C" fn example3() {
LL | |
LL | |     naked_asm!("")
LL | | }
   | |_- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct, enum, or union
  --> $DIR/naked-with-invalid-repr-attr.rs:31:8
   |
LL |   #[repr(C, packed)]
   |          ^
...
LL | / extern "C" fn example4() {
LL | |
LL | |
LL | |     naked_asm!("")
LL | | }
   | |_- not a struct, enum, or union

error[E0517]: attribute should be applied to a struct or union
  --> $DIR/naked-with-invalid-repr-attr.rs:31:11
   |
LL |   #[repr(C, packed)]
   |             ^^^^^^
...
LL | / extern "C" fn example4() {
LL | |
LL | |
LL | |     naked_asm!("")
LL | | }
   | |_- not a struct or union

error[E0517]: attribute should be applied to an enum
  --> $DIR/naked-with-invalid-repr-attr.rs:41:8
   |
LL |   #[repr(u8)]
   |          ^^
...
LL | / extern "C" fn example5() {
LL | |
LL | |     naked_asm!("")
LL | | }
   | |_- not an enum

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0517`.
